--- a/decl-your-lang/commands/main.tex
+++ b/decl-your-lang/commands/main.tex
@@ -50,7 +50,8 @@
 \parindent0pt
 \parskip0.5\baselineskip
 
-\newcommand{\GithubURL}{https://github.com/MetaBorgCube/declare-your-language}
-\newcommand{\BookOnGithub}[1]{
-\href{\GithubURL}{#1}
-}
+\newcommand{\BookGitRepo}{https://github.com/MetaBorgCube/declare-your-language}
+\newcommand{\BookWebSite}{http://metaborgcube.github.io/declare-your-language}
+
+\newcommand{\BookOnGithub}[1]{\href{\BookWebSite}{#1}}
+
