notes for chapter on Spoofax philosophy

--- a/decl-your-lang/language-definition/language-definition.tex
+++ b/decl-your-lang/language-definition/language-definition.tex
@@ -4,12 +4,37 @@
 
 \section{What is a Language?}
 
+capturing domain understanding
+
 internal, external, embedded languages
+
+leaky abstractions
 
 \newpage
 \section{Language Workbenches}
 
 what is a language workbench
 
-Xtext, MPS, Rascal, Spoofax
+compiler-compilers (LEX/YACC)
 
+Centaur
+
+ASF+SDF MetaEnvironment
+
+\begin{description}
+\item[Xtext]
+\item[MPS]
+\item[Rascal]
+\item[Spoofax]
+\end{description}
+
+\section{Spoofax}
+
+declarative meta-languages
+
+capture our understanding of the domain of language definition
+
+separation of concerns
+
+syntax, name binding, type constraints, dynamic semantics, source-to-source
+transformations
