--- a/decl-your-lang/body.tex
+++ b/decl-your-lang/body.tex
@@ -15,8 +15,8 @@
 \newpage
 \input{getting-spoofax/getting-spoofax}
 
-% \newpage
-% \input{syntax/syntax}
+\newpage
+\input{syntax/syntax}
 
 % \newpage
 % \chapter{Names \& Types}
@@ -33,3 +33,5 @@
 % \bibliographystyle{abbrv}
 % \bibliography{bibliography}
 	
+cheat sheets for the meta-DSLs
+
