--- a/decl-your-lang/syntax/syntax.tex
+++ b/decl-your-lang/syntax/syntax.tex
@@ -1,6 +1,18 @@
 \chapter{Syntax}
 
+Spoofax takes a \emph{syntax first} approach to language definition.
+
+The syntax 
+
+We will illustrate the material in this book with a series of Spoofax
+projects names \texttt{LangA}, \texttt{LangB}, \texttt{LangC}, etc. 
+
+In this project 
+
+
+
 \begin{verbatim}
+module 
 context-free syntax
   Exp.Var = ID
   Exp.Mul = [[Exp] * [Exp]] {left}
