--- a/decl-your-lang/commands/labels.tex
+++ b/decl-your-lang/commands/labels.tex
@@ -1,15 +1,18 @@
+\newcommand{\chapterlabel}[1]{\label{chap:#1}}
 \newcommand{\sectionlabel}[1]{\label{sec:#1}}
 \newcommand{\figurelabel}[1]{\label{fig:#1}}
 \newcommand{\listinglabel}[1]{\label{lst:#1}}
 \newcommand{\appendixlabel}[1]{\label{apx:#1}}
 \newcommand{\tablelabel}[1]{\label{tbl:#1}}
 
+\newcommand{\chapterref}[1]{\ref{chap:#1}}
 \newcommand{\sectionref}[1]{\ref{sec:#1}}
 \newcommand{\figureref}[1]{\ref{fig:#1}}
 \newcommand{\listingref}[1]{\ref{lst:#1}}
 \newcommand{\appendixref}[1]{\ref{apx:#1}}
 \newcommand{\tableref}[1]{\ref{tbl:#1}}
 
+\newcommand{\Chapter}[1]{Chapter~\chapterref{#1}}
 \newcommand{\Section}[1]{Section~\sectionref{#1}}
 \newcommand{\Sections}[1]{Sections~#1}
 \newcommand{\Figure}[1]{Fig.~\figureref{#1}}
