--- a/decl-your-lang/body.tex
+++ b/decl-your-lang/body.tex
@@ -8,30 +8,28 @@
 
 \newpage
 \input{preface/preface}
-
-%\newpage
-%\input{language-definition/language-definition}
-
-\newpage
+\input{language-definition/language-definition}
 \input{getting-spoofax/getting-spoofax}
-
-\newpage
+\input{tests/tests}
 \input{syntax/syntax}
 
-% \newpage
-% \chapter{Names \& Types}
-% 
-% \newpage
-% \chapter{Transformation}
-% 
-% \newpage
-% \newpage
-% \chapter{Semantics}
 
+\chapter{Names}
+\chapterlabel{names}
 
-% \nocite{*}
-% \bibliographystyle{abbrv}
-% \bibliography{bibliography}
+\chapter{Type Constraints}
+\chapterlabel{types}
+
+\chapter{Transformation}
+\chapterlabel{transformation}
+
+\chapter{Semantics}
+\chapterlabel{semantics}
+
+\bibliographystyle{abbrv}
+\bibliography{bibliography}
 	
+\appendix
+\chapter{Cheat Sheets}
 cheat sheets for the meta-DSLs
 
