--- a/decl-your-lang/commands/main.tex
+++ b/decl-your-lang/commands/main.tex
@@ -55,6 +55,9 @@
 \newcommand{\BookGitRepo}{https://github.com/MetaBorgCube/declare-your-language}
 \newcommand{\BookWebSite}{http://metaborgcube.github.io/declare-your-language}
 
+\newcommand{\LanguagesRepo}{\BookGitRepo/tree/master/languages/}
+\newcommand{\LanguagesRepoRef}{\href{\BookGitRepo/tree/master/languages/}{languages}}
+
 \newcommand{\BookOnGithub}[1]{\href{\BookWebSite}{#1}}
 
 \newenvironment{sidenote}[1]{
